# bonjour_services

./: Cargo.toml  README.md
src/: main.rs
src/commands/: configs.rs  mod.rs  ping.rs
src/events/: general_handler.rs  mod.rs  tracks_handler.rs
utils/: secret.json
