[package]
name = "bonjour_services"
version = "1.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.20.1", features = ["full"] }
chrono = "0.4"
serde_json = "1.0"
serde = "1.0"

[dependencies.serenity]
version = "0.11"
features = ["client", "cache", "framework", "standard_framework", "voice", "rustls_backend"]

[dependencies.songbird]
version = "0.3"
features = ["builtin-queue"]